dts: arm64: rockchip: add an overlay to switch mali from panthor

--- a/arch/arm64/boot/dts/rockchip/overlay/Makefile
+++ b/arch/arm64/boot/dts/rockchip/overlay/Makefile
@@ -289,7 +289,9 @@ dtbo-$(CONFIG_ARCH_ROCKCHIP) += \
 	rk3568-uart8-m1.dtbo \
 	rk3568-uart9-m1.dtbo \
 	rk3568-w1-gpio3-a5.dtbo \
-	rk3568-w1-gpio3-d1.dtbo
+	rk3568-w1-gpio3-d1.dtbo \
+	rk3588s-mali.dtbo
+
 
 dtbotxt-$(CONFIG_ARCH_ROCKCHIP) += \
 	README.rockchip-overlays
